# Numerical_Methods

./: .gitignore  README.md  det.py  eig.py  inv.py  lu.py  matrix.py  meg.py  norm.py  pyproject.toml  qr.py  richardson.py  solve.py  test.py  utils.py  vand.py
LinAlg/: chol.py  cond.py  det.py  eig.py  givens.py  hess_solve.py  hess_to_triang.py  hilbert.py  inv.py  lu.py  matrix.py  meg.py  norm.py  power.py  qr.py  richardson.py  solve.py  spd.py  svd.py  thomas.py  utils.py  vand.py
Math/: abs.py  acos.py  acosh.py  asin.py  asinh.py  atan.py  atanh.py  ceil.py  cos.py  cosh.py  ew.py  exp.py  floor.py  log.py  root.py  sin.py  sinh.py  sqrt.py  tan.py  tanh.py
Maths/: abs.py  acos.py  acosh.py  asin.py  asinh.py  atan.py  atanh.py  ceil.py  chudnovsky.py  cos.py  cosh.py  exp.py  floor.py  log.py  maths.py  root.py  sin.py  sinh.py  sqrt.py  tan.py  tanh.py
Misc/: linspace.py
NonLin/: fixed_point.py  integrate.py  midpoint.py  newton.py  ostrowski.py  pmedcomp.py  polyfit.py  polyval.py  simpson.py  trapcomp.py  trapezoid.py
Tests/: basics.py  qrtest.py  solve_test.py
src/LinAlg/: __init__.py  chol.py  cond.py  det.py  eig.py  givens.py  hess_to_triang.py  hilbert.py  inv.py  lu.py  matrix.py  meg.py  norm.py  power.py  qr.py  richardson.py  solve.py  spd.py  svd.py  thomas.py  utils.py  vand.py
src/Maths/: __init__.py  abs.py  acos.py  acosh.py  asin.py  asinh.py  atan.py  atanh.py  ceil.py  cos.py  cosh.py  ew.py  exp.py  floor.py  log.py  maths.py  root.py  sin.py  sinh.py  sqrt.py  tan.py  tanh.py  (+1 more)
tests/: basics.py  bisection_test.py  qrtest.py
(+19 files in other folders)
